--- a/src/assets/scss/components/landing.scss
+++ b/src/assets/scss/components/landing.scss
@@ -3,7 +3,7 @@
 .langing-page {
     position: relative;
     overflow: hidden;
-    min-height: calc(100vh - 60px);
+    height: calc(100vh - 60px);
     margin-top: 60px;
     background-image: url('../../images/landing-bg@1x.png');
     background-size: auto 100%;
@@ -44,6 +44,7 @@
         position: relative;
         overflow: hidden;
         transition: all .5s;
+        z-index: 1;
 
         &::after {
             position: absolute;
