--- a/src/assets/scss/components/navigation.scss
+++ b/src/assets/scss/components/navigation.scss
@@ -9,26 +9,35 @@
     position: fixed;
     top: 0;
     z-index: 99;
-    .inner {
-        width: 100%;
-        height: 100%;
-        max-width: 1440px;
+
+    .navigation-left {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 0 15px;
+        color: $dark;
 
-        img {
-            cursor: pointer;
+        .path-line {
+            font-size: 24px;
+            margin: 0 4px 0 10px;
         }
 
-        button {
-            margin: 0 15px;
-
-            &:last-of-type {
-                margin: 0 0 0 15px;
-            }
-
+        .path-name {
+            font-size: 16px;
+            line-height: 24px;
+            font-weight: 300;
         }
+    }
+
+    img {
+        cursor: pointer;
+    }
+
+    button {
+        margin: 0 15px;
+
+        &:last-of-type {
+            margin: 0 0 0 15px;
+        }
+
     }
 }
