--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -41,6 +41,7 @@ body {
     -o-user-select: none;
     user-select: none;
     scroll-behavior: smooth;
+
     * {
         box-sizing: border-box;
     }
@@ -79,7 +80,7 @@ button {
         max-width: 830px;
         border-radius: 35px;
         padding: 14px 30px;
-        
+
         .MuiDialogContentText-root {
             font-family: 'NotoSansTC';
             font-size: 20px;
@@ -87,11 +88,30 @@ button {
             line-height: 30px;
             text-align: center;
             letter-spacing: 0.2em;
-            color: $dark-grey;  
-            padding: 60px 0;  
+            color: $dark-grey;
+            padding: 60px 0;
         }
+
         .MuiDialogActions-root {
             padding: 0;
         }
+    }
+}
+
+#pdf-ani-svg {
+    #cut > rect {
+        width: 126px;
+        height: 127px;
+        animation: fillCut 2s ease-in infinite;
+    }
+}
+
+@keyframes fillCut {
+    0% {
+        height: 127px;
+    }
+
+    100% {
+        height: 0;
     }
 }
