--- a/src/assets/scss/components/uploadStep.scss
+++ b/src/assets/scss/components/uploadStep.scss
@@ -32,6 +32,14 @@
         line-height: 30px;
         font-weight: 400;
 
+        &.Mui-selected {
+            box-shadow: -8px 4px 4px rgba(238, 237, 232, 0.5);
+
+            &:first-of-type {
+                box-shadow: 8px 4px 4px rgba(238, 237, 232, 0.5);
+            }
+        }
+
         .MuiTouchRipple-root {
             display: none;
         }
@@ -92,6 +100,14 @@
 
                 .MuiInputBase-root {
                     border-radius: 30px;
+                    padding-right: 18px;
+
+                    input {
+                        padding: 15px 31px;
+                        font-size: 20px;
+                        line-height: 24px;
+                        color: $dark-grey;
+                    }
 
                     fieldset {
                         border-color: $dark-grey;
@@ -152,6 +168,7 @@
                     white-space: nowrap;
                     text-overflow: ellipsis;
                     padding-right: 8px;
+                    letter-spacing: 0em;
                 }
 
                 .name {
