--- a/src/assets/scss/components/uploadImageDialog.scss
+++ b/src/assets/scss/components/uploadImageDialog.scss
@@ -22,7 +22,7 @@
     }
 
     .file-box {
-        height: 300px;
+        height: 360px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -50,6 +50,10 @@
             height: 120px;
             fill: $dark-grey;
             margin: 25px 0;
+        }
+        img {
+            max-height: 358px;
+            max-width: 780px;
         }
     }
 
