add sign list and store sign image to local storage, render canvas setZoom

--- a/src/assets/scss/components/customButton.scss
+++ b/src/assets/scss/components/customButton.scss
@@ -11,6 +11,7 @@
 
         &.text {
             color: $disabled;
+            cursor: not-allowed;
         }
     }
 
@@ -48,6 +49,7 @@
         &.disabled {
             color: $white;
             background-color: $mid-grey;
+            cursor: not-allowed;
         }
     }
 
