--- a/src/assets/scss/components/signStep.scss
+++ b/src/assets/scss/components/signStep.scss
@@ -16,6 +16,7 @@
             padding: 25px 37px;
             color: $dark-grey;
             border-bottom: 1px solid $mid-grey;
+            height: 111px;
 
             &__title {
                 font-weight: 500;
@@ -56,6 +57,8 @@
         .setting-sign {
             padding: 25px 37px;
             color: $dark-grey;
+            height: calc(100% - 111px);
+            overflow-y: auto;
 
             &__title {
                 font-weight: 500;
@@ -68,13 +71,11 @@
                 border: 1px dashed $dark-grey;
                 padding: 0 20px;
                 margin: 15px 0;
-                .sign {
-                    cursor: grab;
-                }
                 & >div {
                     height: 100%;
                     width: calc(100% - 22px);
                     text-align: center;
+                    cursor: grab;
                 }
                 .delete-btn {
                     width: 22px;
@@ -107,5 +108,8 @@
         justify-content: center;
         position: relative;
         overflow-y: auto;
+        .canvas-container {
+            margin-bottom: 20px;
+        }
     }
 }
