--- a/src/assets/scss/components/customButton.scss
+++ b/src/assets/scss/components/customButton.scss
@@ -103,3 +103,16 @@
         background-color: $light-main;
     }
 }
+
+@media screen and (max-width: 768px) {
+    .custom-button {
+        &.confirm,
+        &.cancel,
+        &.cancel-fill {
+            height: 50px;
+            font-size: 16px;
+            line-height: 24px;
+            padding: 0 30px;
+        }
+    }
+}
