--- a/src/assets/scss/components/landing.scss
+++ b/src/assets/scss/components/landing.scss
@@ -5,6 +5,7 @@
     overflow: hidden;
     height: calc(100vh - 60px);
     margin-top: 60px;
+    background-color: $light-grey;
     background-image: url('../../images/landing-bg@1x.png');
     background-size: auto 100%;
     background-repeat: no-repeat;
@@ -16,7 +17,12 @@
     }
 
     &__main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         position: absolute;
+        max-width: 100vw;
+        width: 480px;
         right: 18%;
         top: 25%;
     }
@@ -32,19 +38,26 @@
     }
 
     .sign-btn {
+        max-width: 480px;
+        min-width: 336px;
+        width: 100%;
         font-size: 24px;
         font-weight: 300;
         line-height: 36px;
         letter-spacing: 0.95em;
+        text-align: center;
+        text-indent: 0.95em;
         background-color: transparent;
         border: none;
-        padding: 31px 123px;
+        padding: 31px 112px;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         margin-top: 10%;
         position: relative;
         overflow: hidden;
         transition: all .5s;
         z-index: 1;
+        word-break: keep-all;
+        color: $dark;
 
         &::after {
             position: absolute;
@@ -64,6 +77,39 @@
             &::after {
                 left: 0;
             }
+        }
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .langing-page {
+        &>img {
+            top: calc(7% + 150px);
+            left: -10%;
+            max-width: 729.99px;
+            max-height: 609.08px;
+            min-width: 438px;
+            min-height: 366px;
+            width: 100%;
+            height: auto;
+        }
+
+        &__main {
+            width: 64%;
+            height: 91%;
+            top: 9%;
+            right: initial;
+            left: calc(36% / 2);
+
+            img {
+                width: 100%;
+            }
+        }
+
+        .sign-btn {
+            position: absolute;
+            bottom: 5%;
+            padding: 27px 40px;
         }
     }
 }
