--- a/src/assets/scss/components/signStep.scss
+++ b/src/assets/scss/components/signStep.scss
@@ -12,6 +12,10 @@
         background-color: $white;
         letter-spacing: 0em;
 
+        .drawer-btn {
+            display: none;
+        }
+
         .setting-title {
             padding: 25px 37px;
             color: $dark-grey;
@@ -54,6 +58,10 @@
             }
         }
 
+        ::-webkit-scrollbar {
+            display: none;
+        }
+
         .setting-sign {
             padding: 25px 37px;
             color: $dark-grey;
@@ -71,12 +79,19 @@
                 border: 1px dashed $dark-grey;
                 padding: 0 20px;
                 margin: 15px 0;
-                & >div {
+
+                &>div {
                     height: 100%;
                     width: calc(100% - 22px);
                     text-align: center;
                     cursor: grab;
                 }
+
+                .sign {
+                    height: 58px;
+                    width: auto;
+                }
+
                 .delete-btn {
                     width: 22px;
                     cursor: pointer;
@@ -93,7 +108,8 @@
                 cursor: pointer;
                 font-weight: 300;
 
-                img, svg {
+                img,
+                svg {
                     margin-left: 12px;
                 }
             }
@@ -107,9 +123,64 @@
         align-items: center;
         justify-content: center;
         position: relative;
-        overflow-y: auto;
+        overflow: auto;
+
         .canvas-container {
             margin-bottom: 20px;
+        }
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .sign-step {
+        &__setting {
+            width: 300px;
+            position: absolute;
+            left: 0;
+            z-index: 1;
+            transition: .5s;
+
+            &.hidden {
+                left: -300px;
+            }
+
+            .drawer-btn {
+                display: flex;
+                align-items: center;
+                position: absolute;
+                width: 25px;
+                height: 50px;
+                color: $dark-grey;
+                background-color: $white;
+                top: 10px;
+                right: -25px;
+                cursor: pointer;
+                border-radius: 0 3px 3px 0;
+                box-shadow: 2px 1px 2px rgb(0 0 0 / 10%);
+
+                &.show {
+                    justify-content: flex-start;
+                }
+
+                &.hidden {
+                    justify-content: flex-end;
+                }
+            }
+
+            .setting-sign {
+                &__sign {
+                    height: 50px;
+                    padding: 0 10px;
+
+                    .sign {
+                        height: 48px;
+                    }
+                }
+            }
+        }
+
+        &__editor {
+            width: 100%;
         }
     }
 }
